k8s/00-common/01-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "home-server-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mark.onthewifi.com
      secretName: home-server-tls
  rules:
    - host: mark.onthewifi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing-service
                port:
                  number: 5173
